[tool.poetry]
name = "dialog"
version = "0.1.0"
description = "Humanized Conversation API (using LLM)"
authors = ["Avelino <hey@avelino.run>", "Vinicius Mesel <4984147+vmesel@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/talkdai/dialog"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.109.1"
sqlalchemy = "^2.0.23"
langchain = "0.1.7"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.3"
python-decouple = "^3.8"
openai = "^1.2.2"
pydantic = "^2.4.2"
psycopg = "^3.1.12"
tiktoken = "^0.5.1"
pandas = "^2.1.3"
psycopg-binary = "^3.1.12"
scikit-learn = "^1.3.2"
alembic = "^1.12.1"
langchain-community = "^0.0.20"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
