[tool.poetry]
name = "dialog"
version = "0.1.0"
description = "Humanized Conversation API (using LLM)"
authors = ["Avelino <hey@avelino.run>", "Vinicius Mesel <4984147+vmesel@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/talkdai/dialog"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "0.109.2"
sqlalchemy = "^2.0.23"
langchain = "0.1.7"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.3"
python-decouple = "^3.8"
openai = "^1.2.2"
pydantic = "^2.4.2"
psycopg = "^3.1.12"
tiktoken = "^0.5.1"
pandas = "^2.1.3"
psycopg-binary = "^3.1.12"
scikit-learn = "^1.3.2"
alembic = "^1.12.1"
langchain-community = "^0.0.20"
importlib-metadata = "^7.0.1"
langchain-openai = "^0.0.6"
pyarrow = "^15.0.0"
iniconfig = "^2.0.0"
dialog-lib = {git = "https://github.com/talkdai/dialog-lib.git", rev = "v0.0.1.3"}


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
black = "^24.3.0"
isort = "^5.12.0"
responses = "^0.25.0"
pytest-mock = "^3.12.0"
pytest-alembic = "^0.11.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
