[tool.poetry]
name = "dialog"
version = "0.1.0"
description = "Humanized Conversation API (using LLM)"
authors = [
    "Avelino <hey@avelino.run>",
    "Vinicius Mesel <4984147+vmesel@users.noreply.github.com>",
]
readme = "README.md"
homepage = "https://github.com/talkdai/dialog"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "0.109.2"
uvicorn = { extras = ["standard"], version = "0.24.0.post1" }
psycopg2 = "2.9.9"
python-decouple = "3.8"
pydantic = "2.7.4"
psycopg = "3.1.12"
tiktoken = "<1"
pandas = "2.1.3"
scikit-learn = "1.5.0"
alembic = "1.12.1"
importlib-metadata = "7.0.1"
pyarrow = "15.0.0"
iniconfig = "2.0.0"
dialog-lib = "0.0.2.7"
langserve = "0.2.0"
sse-starlette = "2.1.0"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
black = "^24.3.0"
isort = "^5.12.0"
responses = "^0.25.0"
pytest-mock = "^3.12.0"
pytest-alembic = "^0.11.0"
pytest-cov = "^4.1.0"
pytest-timeout = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
